Fix attempt for transparent rects on mobile.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,13 +156,11 @@
 
 @keyframes slideIn {
   0% {
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
+    transform: translateX(100%);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 0.1;
   }
 }
@@ -174,7 +172,7 @@
   }
   100% {
     -webkit-transform: translateX(0);
-    opacity: 0.85;
+    opacity: 0.1;
   }
 }
 
